# hip-mem-alloc

./: CMakeLists.txt  README.md
cmake/: FindHIP.cmake
src/: main.cpp
